# platzi-ml-courses

./: .flake8  .gitignore  main.py  pyproject.toml  requirements.txt
Clustering/: clustering_kmeans_1aa7190f-894b-4ea5-b457-24fb419c7226.ipynb  dbscan_f460079b-4fed-429f-9fdd-58b6aad8eb9b.ipynb  final_project.ipynb  hierachical_clustering_e27a7035-5973-4cf5-be54-b7d27bd9f351.ipynb  primer_clustering_0d42915d-a8b6-4658-bdcf-c2093cdcd38a.ipynb
Decision_Tree_and_Random_Forest/: decision_tree_random_forest_project_template_fd59d141-d477-4f10-b39e-8127e0fbccb8.ipynb  final_project.ipynb  primer_arbol_decision_template_84c03d57-915e-4533-852c-f596f47c81e8.ipynb  primer_random_forest_template_a4b4eae3-7fbe-49c5-9f32-66bb8aca4f38.ipynb
MLOPS/: introduction.ipynb
MLOPS/mlruns/1/models/m-00f6cfedc72e4547a92e6354bfb81d3a/artifacts/: MLmodel
MLOPS/mlruns/1/models/m-166a5d8279f243ab99ea8772abe20737/artifacts/: MLmodel  conda.yaml  (+1 more)
NLP/: c4_texts_vocab_statistics.ipynb  c6_lexical_resources.ipynb  etiquetado_nltk.ipynb  nltk_1.ipynb  read_from_web.ipynb  stanza_example.ipynb
NLP/Model Markoviano Latente/: emissionHMM.npy  hmm_viterbi.ipynb  transitionHMM.npy
TicketClassification/: mlflow.db  mlflow.db.bak  tracking_data_tickets.ipynb
TicketClassification/data/data_processed/: count_vectorizer.pkl  test.pkl
TicketClassification/utils/: FeatureExtraction.py  TextProcessing.py
ml-courses/: pyvenv.cfg
ml-ops/: backend.db  mlflow.db
professional-sklearn/: bagging.py  cross_val.py  k_means.py  kpca.py  meanshift.py  pca.py  randomized.py  regularization.py  robust.py
(+47 files in other folders)
