[project]
name = "ml-courses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imblearn>=0.0",
    "matplotlib<3.11",
    "matplotlib-inline>=0.2.2",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "mlflow>=3.14.0",
]
